--- a/scottrun/CMakeLists.txt
+++ b/scottrun/CMakeLists.txt
@@ -35,4 +35,20 @@ add_dependencies(eostest extern_msu_eos)
 add_dependencies(eostest extern_msu_commonutils)
 target_link_libraries(eostest msu_sampler msu_commonutils msu_eos ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY} ${GITHOME_MSU}/commonutils/software/lib/libmsu_commonutils.a ${GITHOME_MSU}/msu_eos/software/lib/libmsu_eos.a ${GITHOME_MSU}/msu_sampler/software/lib/libmsu_sampler.a)
 ########
+
+#######
+set(SOURCE_FILES ./eostest_vsepsilon.cc)
+SET_SOURCE_FILES_PROPERTIES(eostest_vsepsilon.cc
+	PROPERTIES OBJECT_DEPENDS ${GITHOME_MSU}/msu_sampler/software/lib/libmsu_sampler.a)
+SET_SOURCE_FILES_PROPERTIES(eostest_vsepsilon.cc
+	PROPERTIES OBJECT_DEPENDS ${GITHOME_MSU}/msu_eos/software/lib/libmsu_eos.a)
+SET_SOURCE_FILES_PROPERTIES(eostest_vsepsilon.cc
+	PROPERTIES OBJECT_DEPENDS ${GITHOME_MSU}/commonutils/software/lib/libmsu_commonutils.a)
+	  
+add_executable(eostest_vsepsilon ${SOURCE_FILES})
+add_dependencies(eostest_vsepsilon extern_msu_sampler)
+add_dependencies(eostest_vsepsilon extern_msu_eos)
+add_dependencies(eostest_vsepsilon extern_msu_commonutils)
+target_link_libraries(eostest_vsepsilon msu_sampler msu_commonutils msu_eos ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY} ${GITHOME_MSU}/commonutils/software/lib/libmsu_commonutils.a ${GITHOME_MSU}/msu_eos/software/lib/libmsu_eos.a ${GITHOME_MSU}/msu_sampler/software/lib/libmsu_sampler.a)
+########
 	
